Fix the layout issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -768,7 +768,7 @@ a {
 .block-domain__prices {
     color: var(--color-headings);
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 6rem);
     font-size: 2rem;
     font-weight: 600;
